# drift-scope

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yaml  python-publish.yml
src/ddrift/: __init__.py  base.py  sql.py
src/drift/: _utils.py  results.py  sql.py
src/drift_scope/: __init__.py  _sql.py  _utils.py  base.py  dataframe.py  results.py  sql.py
tests/: test_cases.py  test_sql.py
